<resources>
    <string name="app_name">LoginMVVM</string>
    <string name="login">Login MVVM</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="singup_button">Create An Account</string>
    <string name="singup">Singup MVVM</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="username">Username</string>
    <string name="conform_password">Conform Password</string>
</resources>